--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-node_modules/
-img/apoio/
-img/original/
-class/apoio/
-
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -46,3 +41,8 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+include/conection.inc.php
+node_modules/*
+img/apoio/*
+img/original/*
+class/apoio/*
